{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 12,
  "lineage": "555d1363-8fdc-0f70-ac82-eaa258ddf879",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-06fd321c7d635eee7",
            "owner_id": "499191346827",
            "tags": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-0ed3181263a232ef2"
          },
          "dependencies": [
            "aws_vpc.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRT",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09ccd895bff46bb2d",
            "owner_id": "499191346827",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private_Route_table"
            },
            "vpc_id": "vpc-0ed3181263a232ef2"
          },
          "dependencies": [
            "aws_vpc.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRT",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0939c6dd1930b3e46",
            "owner_id": "499191346827",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06fd321c7d635eee7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRoute-Table"
            },
            "vpc_id": "vpc-0ed3181263a232ef2"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dde4f898d23cdd4d",
            "route_table_id": "rtb-09ccd895bff46bb2d",
            "subnet_id": "subnet-06f647bdf6f8d4f4f"
          },
          "dependencies": [
            "aws_route_table.PrivateRT",
            "aws_subnet.Private-subnet",
            "aws_vpc.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02883b39280d97fc1",
            "route_table_id": "rtb-0939c6dd1930b3e46",
            "subnet_id": "subnet-07cb9362db29f2de4"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.PublicRT",
            "aws_subnet.Public-subnet",
            "aws_vpc.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:499191346827:security-group/sg-0c8fdb1bb6d1b3741",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c8fdb1bb6d1b3741",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "for mysql",
            "name_prefix": null,
            "owner_id": "499191346827",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mysql"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed3181263a232ef2"
          },
          "dependencies": [
            "aws_vpc.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:499191346827:security-group/sg-0ce6848dc9fb7035c",
            "description": "enable 22 port",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ce6848dc9fb7035c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "enable 22 port for ec2 ",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "enable ssh",
            "name_prefix": null,
            "owner_id": "499191346827",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "enable-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed3181263a232ef2"
          },
          "dependencies": [
            "aws_vpc.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:499191346827:subnet/subnet-06f647bdf6f8d4f4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-06f647bdf6f8d4f4f",
            "map_public_ip_on_launch": false,
            "owner_id": "499191346827",
            "tags": {
              "Name": "Private-subnet"
            },
            "vpc_id": "vpc-0ed3181263a232ef2"
          },
          "dependencies": [
            "aws_vpc.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private-subnet-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:499191346827:subnet/subnet-03d7dd9f0de6e9eab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-03d7dd9f0de6e9eab",
            "map_public_ip_on_launch": false,
            "owner_id": "499191346827",
            "tags": {
              "Name": "Private-subnet-1"
            },
            "vpc_id": "vpc-0ed3181263a232ef2"
          },
          "dependencies": [
            "aws_vpc.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:499191346827:subnet/subnet-07cb9362db29f2de4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-07cb9362db29f2de4",
            "map_public_ip_on_launch": false,
            "owner_id": "499191346827",
            "tags": {
              "Name": "Public-subnet"
            },
            "vpc_id": "vpc-0ed3181263a232ef2"
          },
          "dependencies": [
            "aws_vpc.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "network",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:499191346827:vpc/vpc-0ed3181263a232ef2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-072a37c7904e07840",
            "default_route_table_id": "rtb-04ca06f21206eb3ef",
            "default_security_group_id": "sg-0ca5f42e5f681fee0",
            "dhcp_options_id": "dopt-6757c91f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ed3181263a232ef2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04ca06f21206eb3ef",
            "owner_id": "499191346827",
            "tags": {
              "Name": "myvpc"
            }
          }
        }
      ]
    }
  ]
}